Changed the dummy of the neopixel lib Created a dummy of the board module. Deleted the debug file. Not need anymore. Debugging with CPython can be directly done in with the neotext.py file.
Now we have a correctly working scrolling function, that has be renamed to scroll, for easier usage. Therefore the internal array with the x,y positions of every pixel, also now safes their colour.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 .idea/NeoText.iml
 .idea/vcs.xml
 .idea/workspace.xml
+.idea/dictionaries/basti.xml
+neotext/neotext_debug.pyc
+neotext/.idea/deployment.xml
+neotext/.idea/misc.xml
+neotext/.idea/modules.xml
+neotext/.idea/vcs.xml
+neotext/.idea/workspace.xml
+neotext/.idea/dictionaries/Mümmel.xml
+neotext/.vscode/database.json
+neotext/.vscode/launch.json
+neotext/__pycache__/neopixel.cpython-36.pyc
+neotext/__pycache__/neotext_debug.cpython-36.pyc
